src failure with tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,5 @@ jobs:
       - name: Lancer les tests unitaires
         run: |
           echo "Lancement des tests unitaires..."
+          export PYTHONPATH=$PYTHONPATH:$(pwd)/src
           pytest --maxfail=1 --disable-warnings -q
